<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_item_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_item_tour_packages"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_tour_packages"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_item_attractions"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_attractions"
        app:showAsAction="always|withText" />


</menu>
