<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017.
  ~ Created by Joseph Mangmang on 10/17/17 10:56 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_medium"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_small">

            <TextView
                android:id="@+id/text_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_filter_list"
                android:gravity="center"
                android:text="@string/title_filter" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@color/grey_100" />

            <TextView
                android:id="@+id/text_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_sort"
                android:gravity="center"
                android:text="@string/title_sort" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@color/grey_100" />

            <TextView
                android:id="@+id/text_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_map"
                android:gravity="center"
                android:text="@string/title_map" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/option_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8a2e2e2e"/>
</LinearLayout>